# Fish

./: README.md  dune  xintegration
doc/: design.md
src/lib/: dune  fish.mli
src/lib/admin/: admin.mli  game_result.ml  manager.ml  manager.mli  referee.ml  referee.mli  timeout_util.ml  timeout_util.mli
src/lib/common/: action.ml  board.ml  board.mli  common.mli  game_state.ml  game_state.mli  game_tree.ml  game_tree.mli  penguin.ml  penguin.mli  player_state.ml  player_state.mli  tile.ml  tile.mli
src/lib/game/: action.ml  action.mli  board.ml  board.mli  board_config.ml  board_config.mli  game.mli  game_state.ml  game_state.mli  game_tree.ml  game_tree.mli  penguin.ml  penguin.mli  player.ml  player.mli  player_color.ml  player_list.ml  player_list.mli  player_state.ml  player_state.mli  tile.ml  tile.mli
src/lib/gui/: gui.mli  render.ml  render.mli  visualizers.ml  visualizers.mli
src/lib/player/: player.ml  player.mli  strategy.ml  strategy.mli
src/lib/remote/: remote.mli  remote_player.ml  remote_player.mli  signup_manager.ml  signup_manager.mli
src/lib/serialize/: serialization.ml  serialization.mli  serialize.mli
src/lib/util/: circular_queue.ml  circular_queue.mli  order.ml  order.mli  position.ml  position.mli  timeout.ml  util.mli
src/test/integration/: dune  xboard.ml  xclient.ml  xgui.ml  xref.ml  xserver.ml  xstate.ml  xtree.ml
src/test/unittests/admin/: dune  manager_test.ml  mock_players.ml  mock_players.mli  referee_test.ml  util.ml  util.mli
src/test/unittests/common/: board_test.ml  dune  game_state_test.ml  game_tree_test.ml  (+3 more)
(+15 files in other folders)
