(library
  (name fish)
  ; these are the interface modules used to control accessibility
  (modules_without_implementation 
   fish util game gui serialize
  )
  (libraries graphics extlib yojson core)
  (preprocess (pps ppx_let ppx_compare ppx_jane))
)

; treat subdirectories as if they are at the same level
; selectively expose them in `fish.mli`
(include_subdirs unqualified)
