(library
  (name fish)
  ; these are the interface modules used to control accessibility
  (modules_without_implementation 
   fish util common gui serialize admin
  )
  (libraries graphics extlib yojson core lwt lwt.unix)
  (preprocess (pps ppx_deriving.show ppx_jane))
)

; treat subdirectories as if they are at the same level
; selectively expose them in `fish.mli`
(include_subdirs unqualified)
